fix: Fix the row-gap input

--- a/src/blocks/form.css
+++ b/src/blocks/form.css
@@ -20,7 +20,6 @@
   height: 100%;
   max-height: 58px;
   max-width: 358px;
-  row-gap: 30px;
   margin: 50px 0 216px;
 }
 
@@ -36,6 +35,10 @@
   font-size: 14px;
   line-height: 17px;
   font-weight: 500;
+}
+
+.form__input:nth-child(3) {
+  margin-top: 30px;
 }
 
 .form__input:focus {
